<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/enterYourNameLand"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activitys.IntroActivity2">

    <Button
        android:id="@+id/btnGoToHomePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/get_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
        tools:ignore="NotSibling,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageViewBookReading"
        android:layout_width="366dp"
        android:layout_height="323dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bookreading"
        android:contentDescription="@string/imageBookReadingDescription" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/enter_your_name"
        android:foregroundGravity="center"
        android:gravity="center"
        android:textColorHint="@color/dark_gray"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBookReading"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>