<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.library.LibraryFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_view_library"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/list_item_library" />



    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="2dp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_shelf_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:minWidth="0dp"
                android:onClick="onClick"
                android:text="@string/shelf_f"
                android:textColor="@color/darker_gray"
                android:textSize="11sp"
                app:layout_constraintStart_toEndOf="@+id/button_shelf_e"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/button_shelf_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:minWidth="0dp"
                android:onClick="onClick"
                android:text="@string/shelf_e"
                android:textColor="@color/darker_gray"
                android:textSize="11sp"
                app:layout_constraintStart_toEndOf="@+id/button_shelf_d"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/button_shelf_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:minWidth="0dp"
                android:onClick="onClick"
                android:text="@string/shelf_d"
                android:textColor="@color/darker_gray"
                android:textSize="11sp"
                app:layout_constraintStart_toEndOf="@+id/button_shelf_c"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/button_shelf_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:minWidth="0dp"
                android:onClick="onClick"
                android:text="@string/shelf_c"
                android:textColor="@color/darker_gray"
                android:textSize="11sp"
                app:layout_constraintStart_toEndOf="@+id/button_shelf_b"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/button_shelf_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:minWidth="0dp"
                android:onClick="onClick"
                android:text="@string/shelf_b"
                android:textColor="@color/darker_gray"
                android:textSize="11sp"
                app:layout_constraintStart_toEndOf="@+id/button_shelf_a"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/button_shelf_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:minWidth="0dp"
                android:onClick="onClick"
                android:text="@string/shelf_a"
                android:textColor="@color/darker_gray"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>